fix: correcciones de incompativilidad con docker